Fix long notification text overflow

--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -1846,12 +1846,14 @@ label {
   top: 20px;
   right: 20px;
   z-index: 11;
+  overflow: hidden;
   margin-bottom: 0.5rem;
   padding: 1.5rem 2.5rem;
   width: 350px;
   border-radius: 3px;
   background-color: #f0f0f0;
   box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 9px 0;
+  text-overflow: ellipsis;
   cursor: default;
   transition: top 300ms ease-in, opacity 150ms;
   animation: fadeInRight 300ms cubic-bezier(0.4, 0, 0.2, 1); }
